--- a/.codebolt/projectState.json
+++ b/.codebolt/projectState.json
@@ -55,12 +55,13 @@
             "type": "leaf",
             "data": {
               "views": [
-                "Code"
+                "Code",
+                "246e4754-a47e-46e4-9d07-27afbcc05f9d"
               ],
               "activeView": "Code",
               "id": "1"
             },
-            "size": 768
+            "size": 1151
           },
           {
             "type": "branch",
@@ -74,27 +75,26 @@
                   "activeView": "Chat",
                   "id": "2"
                 },
-                "size": 378
+                "size": 575
               },
               {
                 "type": "leaf",
                 "data": {
                   "views": [
-                    "Preview",
-                    "Terminal-1730781415539"
+                    "Preview"
                   ],
                   "activeView": "Preview",
                   "id": "3"
                 },
-                "size": 378
+                "size": 181
               }
             ],
-            "size": 768
+            "size": 381.796875
           }
         ],
         "size": 756
       },
-      "width": 1536,
+      "width": 1532.796875,
       "height": 756,
       "orientation": "HORIZONTAL"
     },
@@ -102,31 +102,35 @@
       "Code": {
         "id": "Code",
         "contentComponent": "Code",
+        "tabComponent": "props.defaultTabComponent",
         "title": "Code",
+        "renderer": "always"
+      },
+      "246e4754-a47e-46e4-9d07-27afbcc05f9d": {
+        "id": "246e4754-a47e-46e4-9d07-27afbcc05f9d",
+        "contentComponent": "Terminal",
+        "tabComponent": "props.defaultTabComponent",
+        "title": "Terminal",
         "renderer": "always"
       },
       "Chat": {
         "id": "Chat",
         "contentComponent": "Chat",
+        "tabComponent": "props.defaultTabComponent",
         "title": "Chat",
         "renderer": "always"
       },
       "Preview": {
         "id": "Preview",
         "contentComponent": "Preview",
+        "tabComponent": "props.defaultTabComponent",
         "title": "Preview",
-        "renderer": "always"
-      },
-      "Terminal-1730781415539": {
-        "id": "Terminal-1730781415539",
-        "contentComponent": "Terminal",
-        "title": "Terminal",
         "renderer": "always"
       }
     },
-    "activeGroup": "3"
+    "activeGroup": "1"
   },
   "pinnedAgent": [],
   "activeAgent": false,
-  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-2\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-18\",\"root-19\"],\"selectedItems\":[]}}"
+  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-2\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-18\",\"root-19\",\"root-20\",\"root-16-1\",\"root-16-3\",\"root-8\",\"root-8-2\",\"root-8-2-5\"],\"selectedItems\":[]}}"
 }
