--- a/.codebolt/projectState.json
+++ b/.codebolt/projectState.json
@@ -60,7 +60,7 @@
               "activeView": "Code",
               "id": "1"
             },
-            "size": 877
+            "size": 768
           },
           {
             "type": "branch",
@@ -74,21 +74,23 @@
                   "activeView": "Chat",
                   "id": "2"
                 },
-                "size": 378
+                "size": 100
               },
               {
                 "type": "leaf",
                 "data": {
                   "views": [
-                    "Preview"
+                    "Preview",
+                    "4ecd1fd9-ab55-44f7-92f5-978d346fbe56",
+                    "ProjectSettings"
                   ],
-                  "activeView": "Preview",
+                  "activeView": "ProjectSettings",
                   "id": "3"
                 },
-                "size": 378
+                "size": 656
               }
             ],
-            "size": 659
+            "size": 768
           }
         ],
         "size": 756
@@ -118,9 +120,22 @@
         "tabComponent": "props.defaultTabComponent",
         "title": "Preview",
         "renderer": "always"
+      },
+      "4ecd1fd9-ab55-44f7-92f5-978d346fbe56": {
+        "id": "4ecd1fd9-ab55-44f7-92f5-978d346fbe56",
+        "contentComponent": "Terminal",
+        "tabComponent": "props.defaultTabComponent",
+        "title": "Terminal",
+        "renderer": "always"
+      },
+      "ProjectSettings": {
+        "id": "ProjectSettings",
+        "contentComponent": "ProjectSettings",
+        "tabComponent": "props.defaultTabComponent",
+        "title": "ProjectSettings"
       }
     },
-    "activeGroup": "2"
+    "activeGroup": "1"
   },
   "pinnedAgent": [
     {
@@ -146,5 +161,5 @@
     }
   ],
   "activeAgent": false,
-  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-2\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-18\",\"root-19\",\"root-20\",\"root-8\",\"root-8-2\"],\"selectedItems\":[]}}"
+  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-2\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-18\",\"root-19\",\"root-20\"],\"selectedItems\":[]}}"
 }
