--- a/.codebolt/projectState.json
+++ b/.codebolt/projectState.json
@@ -60,7 +60,7 @@
               "activeView": "Code",
               "id": "1"
             },
-            "size": 768
+            "size": 1010.4000244140625
           },
           {
             "type": "branch",
@@ -74,23 +74,21 @@
                   "activeView": "Chat",
                   "id": "2"
                 },
-                "size": 100
+                "size": 378
               },
               {
                 "type": "leaf",
                 "data": {
                   "views": [
-                    "Preview",
-                    "4ecd1fd9-ab55-44f7-92f5-978d346fbe56",
-                    "ProjectSettings"
+                    "Preview"
                   ],
-                  "activeView": "ProjectSettings",
+                  "activeView": "Preview",
                   "id": "3"
                 },
-                "size": 656
+                "size": 378
               }
             ],
-            "size": 768
+            "size": 525.5999755859375
           }
         ],
         "size": 756
@@ -120,22 +118,9 @@
         "tabComponent": "props.defaultTabComponent",
         "title": "Preview",
         "renderer": "always"
-      },
-      "4ecd1fd9-ab55-44f7-92f5-978d346fbe56": {
-        "id": "4ecd1fd9-ab55-44f7-92f5-978d346fbe56",
-        "contentComponent": "Terminal",
-        "tabComponent": "props.defaultTabComponent",
-        "title": "Terminal",
-        "renderer": "always"
-      },
-      "ProjectSettings": {
-        "id": "ProjectSettings",
-        "contentComponent": "ProjectSettings",
-        "tabComponent": "props.defaultTabComponent",
-        "title": "ProjectSettings"
       }
     },
-    "activeGroup": "1"
+    "activeGroup": "3"
   },
   "pinnedAgent": [
     {
@@ -161,5 +146,5 @@
     }
   ],
   "activeAgent": false,
-  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-2\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-18\",\"root-19\",\"root-20\"],\"selectedItems\":[]}}"
+  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-2\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-18\",\"root-19\",\"root-20\",\"root-21\"],\"selectedItems\":[]}}"
 }
