--- a/.codebolt/projectState.json
+++ b/.codebolt/projectState.json
@@ -60,35 +60,19 @@
               "activeView": "Code",
               "id": "1"
             },
-            "size": 1010.4000244140625
+            "size": 573
           },
           {
-            "type": "branch",
-            "data": [
-              {
-                "type": "leaf",
-                "data": {
-                  "views": [
-                    "Chat"
-                  ],
-                  "activeView": "Chat",
-                  "id": "2"
-                },
-                "size": 378
-              },
-              {
-                "type": "leaf",
-                "data": {
-                  "views": [
-                    "Preview"
-                  ],
-                  "activeView": "Preview",
-                  "id": "3"
-                },
-                "size": 378
-              }
-            ],
-            "size": 525.5999755859375
+            "type": "leaf",
+            "data": {
+              "views": [
+                "Preview",
+                "Chat"
+              ],
+              "activeView": "Chat",
+              "id": "3"
+            },
+            "size": 963
           }
         ],
         "size": 756
@@ -105,18 +89,18 @@
         "title": "Code",
         "renderer": "always"
       },
-      "Chat": {
-        "id": "Chat",
-        "contentComponent": "Chat",
-        "tabComponent": "props.defaultTabComponent",
-        "title": "Chat",
-        "renderer": "always"
-      },
       "Preview": {
         "id": "Preview",
         "contentComponent": "Preview",
         "tabComponent": "props.defaultTabComponent",
         "title": "Preview",
+        "renderer": "always"
+      },
+      "Chat": {
+        "id": "Chat",
+        "contentComponent": "Chat",
+        "tabComponent": "props.defaultTabComponent",
+        "title": "Chat",
         "renderer": "always"
       }
     },
