--- a/.codebolt/projectState.json
+++ b/.codebolt/projectState.json
@@ -60,19 +60,20 @@
               "activeView": "Code",
               "id": "1"
             },
-            "size": 573
+            "size": 907
           },
           {
             "type": "leaf",
             "data": {
               "views": [
                 "Preview",
-                "Chat"
+                "Chat",
+                "Console"
               ],
               "activeView": "Chat",
               "id": "3"
             },
-            "size": 963
+            "size": 629
           }
         ],
         "size": 756
@@ -102,6 +103,13 @@
         "tabComponent": "props.defaultTabComponent",
         "title": "Chat",
         "renderer": "always"
+      },
+      "Console": {
+        "id": "Console",
+        "contentComponent": "Console",
+        "tabComponent": "props.defaultTabComponent",
+        "title": "Console",
+        "renderer": "always"
       }
     },
     "activeGroup": "3"
@@ -130,5 +138,5 @@
     }
   ],
   "activeAgent": false,
-  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-2\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-18\",\"root-19\",\"root-20\",\"root-21\"],\"selectedItems\":[]}}"
+  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-18\",\"root-19\",\"root-20\",\"root-21\"],\"selectedItems\":[]}}"
 }
