--- a/.codebolt/projectState.json
+++ b/.codebolt/projectState.json
@@ -52,44 +52,50 @@
         "type": "branch",
         "data": [
           {
+            "type": "leaf",
+            "data": {
+              "views": [
+                "Code"
+              ],
+              "activeView": "Code",
+              "id": "1"
+            },
+            "size": 512
+          },
+          {
             "type": "branch",
             "data": [
               {
                 "type": "leaf",
                 "data": {
                   "views": [
-                    "Code",
-                    "Preview"
+                    "Chat"
                   ],
-                  "activeView": "Code",
-                  "id": "4"
+                  "activeView": "Chat",
+                  "id": "2"
                 },
-                "size": 684
+                "size": 334
               },
               {
                 "type": "leaf",
                 "data": {
                   "views": [
-                    "Console",
-                    "Chat",
-                    "Debug",
-                    "Git",
-                    "MarketPlace"
+                    "Preview"
                   ],
-                  "activeView": "Console",
-                  "id": "5"
+                  "activeView": "Preview",
+                  "id": "3"
                 },
-                "size": 852
+                "size": 334
               }
             ],
-            "size": 756
+            "size": 512
           }
         ],
-        "size": 1536
+        "size": 668
       },
-      "width": 1536,
-      "height": 756,
-      "orientation": "VERTICAL"
+      "width": 1024,
+      "height": 668,
+      "orientation": "HORIZONTAL"
     },
     "panels": {
       "Code": {
@@ -99,20 +105,6 @@
         "title": "Code",
         "renderer": "always"
       },
-      "Preview": {
-        "id": "Preview",
-        "contentComponent": "Preview",
-        "tabComponent": "props.defaultTabComponent",
-        "title": "Preview",
-        "renderer": "always"
-      },
-      "Console": {
-        "id": "Console",
-        "contentComponent": "Console",
-        "tabComponent": "props.defaultTabComponent",
-        "title": "Console",
-        "renderer": "always"
-      },
       "Chat": {
         "id": "Chat",
         "contentComponent": "Chat",
@@ -120,29 +112,15 @@
         "title": "Chat",
         "renderer": "always"
       },
-      "Debug": {
-        "id": "Debug",
-        "contentComponent": "Debug",
+      "Preview": {
+        "id": "Preview",
+        "contentComponent": "Preview",
         "tabComponent": "props.defaultTabComponent",
-        "title": "Debug",
-        "renderer": "always"
-      },
-      "Git": {
-        "id": "Git",
-        "contentComponent": "Git",
-        "tabComponent": "props.defaultTabComponent",
-        "title": "Git",
-        "renderer": "always"
-      },
-      "MarketPlace": {
-        "id": "MarketPlace",
-        "contentComponent": "MarketPlace",
-        "tabComponent": "props.defaultTabComponent",
-        "title": "MarketPlace",
+        "title": "Preview",
         "renderer": "always"
       }
     },
-    "activeGroup": "5"
+    "activeGroup": "2"
   },
   "pinnedAgent": [
     {
@@ -168,5 +146,5 @@
     }
   ],
   "activeAgent": false,
-  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-19\",\"root-20\",\"root-21\",\"root-2\",\"root-17-1\",\"root-11\",\"root-18\"],\"selectedItems\":[]}}"
+  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-2\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-18\",\"root-19\",\"root-20\",\"root-21\"],\"selectedItems\":[]}}"
 }
