--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -1,20 +1,27 @@
-name: Deploy static content to GitHub Pages
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches: [main]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
 env:
+  # Hosted GitHub runners have 7 GB of memory available, let's use 6 GB
   NODE_OPTIONS: --max-old-space-size=6144
 
 jobs:
@@ -25,28 +32,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4  # Upgraded from v3
-
+        uses: actions/checkout@v3
       - name: Set up Node.js
-        uses: actions/setup-node@v4  # Upgraded from v3
+        uses: actions/setup-node@v3
         with:
-          node-version: 20.x  # Updated to LTS version
+          node-version: 18.x
           cache: yarn
-
       - name: Install dependencies
         run: yarn install --frozen-lockfile --non-interactive
-
       - name: Build
         run: yarn build
-
       - name: Setup Pages
-        uses: actions/configure-pages@v4  # Upgraded from v3
-
+        uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: build
-
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3  # Upgraded to latest version
+        uses: actions/deploy-pages@v2
