--- a/.codebolt/projectState.json
+++ b/.codebolt/projectState.json
@@ -1,5 +1,4 @@
 {
-  "activeAgent": false,
   "currentLayout": {
     "grid": {
       "root": {
@@ -14,62 +13,13 @@
               "activeView": "Code",
               "id": "1"
             },
-<<<<<<< HEAD
-            "size": 1152.7999877929688
-=======
-            "size": 849.9140625
->>>>>>> 20c881c7d3bcaea5f51650d8e362eabe1c086260
-          },
-          {
-            "type": "branch",
-            "data": [
-              {
-                "type": "leaf",
-                "data": {
-                  "views": [
-                    "Chat"
-                  ],
-                  "activeView": "Chat",
-                  "id": "2"
-                },
-<<<<<<< HEAD
-                "size": 378
-=======
-                "size": 430
->>>>>>> 20c881c7d3bcaea5f51650d8e362eabe1c086260
-              },
-              {
-                "type": "leaf",
-                "data": {
-                  "views": [
-                    "Preview"
-                  ],
-                  "activeView": "Preview",
-                  "id": "3"
-                },
-<<<<<<< HEAD
-                "size": 378
-              }
-            ],
-            "size": 383.20001220703125
+            "size": 1536
           }
         ],
         "size": 756
       },
       "width": 1536,
       "height": 756,
-=======
-                "size": 430
-              }
-            ],
-            "size": 620.0859375
-          }
-        ],
-        "size": 860
-      },
-      "width": 1470,
-      "height": 860,
->>>>>>> 20c881c7d3bcaea5f51650d8e362eabe1c086260
       "orientation": "HORIZONTAL"
     },
     "panels": {
@@ -79,51 +29,10 @@
         "tabComponent": "props.defaultTabComponent",
         "title": "Code",
         "renderer": "always"
-      },
-      "Chat": {
-        "id": "Chat",
-        "contentComponent": "Chat",
-        "tabComponent": "props.defaultTabComponent",
-        "title": "Chat",
-        "renderer": "always"
-      },
-      "Preview": {
-        "id": "Preview",
-        "contentComponent": "Preview",
-        "tabComponent": "props.defaultTabComponent",
-        "title": "Preview",
-        "renderer": "always"
       }
     },
     "activeGroup": "1"
   },
-<<<<<<< HEAD
-  "pinnedAgent": [
-    {
-      "id": 1,
-      "agentId": "6dd799b5-43c2-4c55-ba49-cae6cbac2498",
-      "title": "CodeBolt Dev",
-      "avatarSrc": "https://placehold.co/200x200",
-      "avatarFallback": "CE",
-      "description": "Codebolt Dev, is  a highly skilled software developer with extensive knowledge in many programming languages, frameworks, design patterns, and best practices.",
-      "longDescription": "A basic agent designed for the Codebolt platform, offering a range of\nfunctionalities to enhance interaction with the platform.\n",
-      "zipFilePath": "https://storage.googleapis.com/codeboltai.appspot.com/agents/bvfiVEFStP.zip",
-      "agentPath": "C:\\Users\\NURSID\\AppData\\Roaming\\codebolt\\.codebolt\\6dd799b5-43c2-4c55-ba49-cae6cbac2498",
-      "isLocal": true,
-      "tags": [
-        "web",
-        "code-generation"
-      ],
-      "isInstalled": false,
-      "version": "1.1.6",
-      "createdAt": "2024-11-03T18:02:26.836Z",
-      "needsUpdate": false,
-      "currentPinned": false
-    }
-  ],
-  "activeAgent": false,
-  "treeViewState": "{\"tree-2\":{\"focusedItem\":null,\"expandedItems\":[\"root-1\",\"root-2\",\"root-3\",\"root-4\",\"root-5\",\"root-6\",\"root-7\",\"root-8\",\"root-9\",\"root-10\",\"root-11\",\"root-12\",\"root-13\",\"root-14\",\"root-15\",\"root-16\",\"root-17\",\"root-18\",\"root-19\",\"root-20\",\"root-21\"],\"selectedItems\":[]}}"
-=======
-  "pinnedAgent": []
->>>>>>> 20c881c7d3bcaea5f51650d8e362eabe1c086260
+  "pinnedAgent": [],
+  "activeAgent": false
 }
