--- a/.codebolt/projectState.json
+++ b/.codebolt/projectState.json
@@ -8,7 +8,9 @@
             "type": "leaf",
             "data": {
               "views": [
-                "Code"
+                "Code",
+                "0e7ba2fb-4f85-485e-a1ef-b12ef330b962",
+                "Preview"
               ],
               "activeView": "Code",
               "id": "1"
@@ -28,6 +30,20 @@
         "contentComponent": "Code",
         "tabComponent": "props.defaultTabComponent",
         "title": "Code",
+        "renderer": "always"
+      },
+      "0e7ba2fb-4f85-485e-a1ef-b12ef330b962": {
+        "id": "0e7ba2fb-4f85-485e-a1ef-b12ef330b962",
+        "contentComponent": "Terminal",
+        "tabComponent": "props.defaultTabComponent",
+        "title": "Terminal",
+        "renderer": "always"
+      },
+      "Preview": {
+        "id": "Preview",
+        "contentComponent": "Preview",
+        "tabComponent": "props.defaultTabComponent",
+        "title": "Preview",
         "renderer": "always"
       }
     },
