--- a/.codebolt/projectState.json
+++ b/.codebolt/projectState.json
@@ -13,7 +13,7 @@
               "activeView": "Code",
               "id": "1"
             },
-            "size": 592
+            "size": 1036
           },
           {
             "type": "leaf",
@@ -22,15 +22,15 @@
                 "Chat"
               ],
               "activeView": "Chat",
-              "id": "2"
+              "id": "3"
             },
-            "size": 592
+            "size": 500
           }
         ],
-        "size": 860
+        "size": 756
       },
-      "width": 1184,
-      "height": 860,
+      "width": 1536,
+      "height": 756,
       "orientation": "HORIZONTAL"
     },
     "panels": {
@@ -51,6 +51,154 @@
     },
     "activeGroup": "1"
   },
-  "pinnedAgent": [],
-  "activeAgent": false
+  "pinnedAgent": [
+    {
+      "agentId": "c4d3fdb9-cf9e-4f82-8a1d-0160bbfc9ae9",
+      "title": "Act",
+      "avatarSrc": "https://placehold.co/200x200",
+      "avatarFallback": "CE",
+      "description": "Codebolt Dev, is  a highly skilled software developer with extensive knowledge in many programming languages, frameworks, design patterns, and best practices.",
+      "longDescription": "Codebolt Dev, is  a highly skilled software developer with extensive knowledge in many programming languages, frameworks, design patterns, and best practices.\n",
+      "agentPath": "",
+      "requiredTools": null,
+      "metadata": {
+        "agent_routing": {
+          "worksonblankcode": true,
+          "worksonexistingcode": true,
+          "supportedlanguages": [],
+          "supportedframeworks": []
+        },
+        "defaultagentllm": {
+          "strict": true,
+          "modelorder": [
+            "ollama2"
+          ]
+        },
+        "sdlc_steps_managed": [],
+        "llm_role": [
+          {
+            "name": "documentationllm",
+            "description": "LLM to be used for advanced Documentation. Please select a model that excels in documentation tasks.",
+            "strict": true,
+            "modelorder": [
+              "gpt-4-turbo",
+              "gpt-3.5-turbo",
+              "mistral7b.perplexity",
+              "mistral7b.any",
+              "llama2-70b",
+              "llama2-15b",
+              "group.documentationmodels"
+            ]
+          },
+          {
+            "name": "testingllm",
+            "description": "LLM to be used for advanced Testing. Please select a model that excels in testing tasks.",
+            "strict": true,
+            "modelorder": [
+              "gpt-4-turbo",
+              "gpt-3.5-turbo",
+              "mistral7b.perplexity",
+              "mistral7b.any",
+              "llama2-70b",
+              "llama2-15b",
+              "group.testingmodels"
+            ]
+          },
+          {
+            "name": "actionllm",
+            "description": "LLM to be used for executing advanced actions.",
+            "strict": true,
+            "modelorder": [
+              "gpt-4-turbo",
+              "gpt-3.5-turbo",
+              "mistral7b.perplexity",
+              "mistral7b.any",
+              "llama2-70b",
+              "llama2-15b",
+              "group.actionmodels"
+            ]
+          }
+        ]
+      },
+      "version": "1.1.20",
+      "zipFilePath": "https://pub-cd2980acaa6d4462a4356b5afe3a82d6.r2.dev/agent/536e028b-dcdf-46ba-a1b5-fd1b75d8bf6e.zip",
+      "isLocal": false,
+      "isInstalled": true,
+      "currentPinned": true
+    }
+  ],
+  "activeAgent": {
+    "agentId": "c4d3fdb9-cf9e-4f82-8a1d-0160bbfc9ae9",
+    "title": "Act",
+    "avatarSrc": "https://placehold.co/200x200",
+    "avatarFallback": "CE",
+    "description": "Codebolt Dev, is  a highly skilled software developer with extensive knowledge in many programming languages, frameworks, design patterns, and best practices.",
+    "longDescription": "Codebolt Dev, is  a highly skilled software developer with extensive knowledge in many programming languages, frameworks, design patterns, and best practices.\n",
+    "agentPath": "",
+    "requiredTools": null,
+    "metadata": {
+      "agent_routing": {
+        "worksonblankcode": true,
+        "worksonexistingcode": true,
+        "supportedlanguages": [],
+        "supportedframeworks": []
+      },
+      "defaultagentllm": {
+        "strict": true,
+        "modelorder": [
+          "ollama2"
+        ]
+      },
+      "sdlc_steps_managed": [],
+      "llm_role": [
+        {
+          "name": "documentationllm",
+          "description": "LLM to be used for advanced Documentation. Please select a model that excels in documentation tasks.",
+          "strict": true,
+          "modelorder": [
+            "gpt-4-turbo",
+            "gpt-3.5-turbo",
+            "mistral7b.perplexity",
+            "mistral7b.any",
+            "llama2-70b",
+            "llama2-15b",
+            "group.documentationmodels"
+          ]
+        },
+        {
+          "name": "testingllm",
+          "description": "LLM to be used for advanced Testing. Please select a model that excels in testing tasks.",
+          "strict": true,
+          "modelorder": [
+            "gpt-4-turbo",
+            "gpt-3.5-turbo",
+            "mistral7b.perplexity",
+            "mistral7b.any",
+            "llama2-70b",
+            "llama2-15b",
+            "group.testingmodels"
+          ]
+        },
+        {
+          "name": "actionllm",
+          "description": "LLM to be used for executing advanced actions.",
+          "strict": true,
+          "modelorder": [
+            "gpt-4-turbo",
+            "gpt-3.5-turbo",
+            "mistral7b.perplexity",
+            "mistral7b.any",
+            "llama2-70b",
+            "llama2-15b",
+            "group.actionmodels"
+          ]
+        }
+      ]
+    },
+    "version": "1.1.20",
+    "zipFilePath": "https://pub-cd2980acaa6d4462a4356b5afe3a82d6.r2.dev/agent/536e028b-dcdf-46ba-a1b5-fd1b75d8bf6e.zip",
+    "isLocal": false,
+    "isInstalled": true,
+    "currentPinned": true
+  }
 }
